@@ -7,6 +7,7 @@ Version 1.1.1.2
  - Added Cash InOut Daily Summary
  - Add PT Claim Sub, Pawner
  - Add OLD PT in PT
+ - Include Daily Insurance Report
 
 Version 1.1.1.1
  - Pawnticket Renewal, show old PT#
